[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/objects/Portal.gd" type="Script" id=1]
[ext_resource path="res://assets/objects/portal_frame.png" type="Texture" id=2]
[ext_resource path="res://assets/objects/portals.png" type="Texture" id=3]
[ext_resource path="res://scenes/objects/ColorAddSprite.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/objects/coloradd.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/portal_in.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/portal_out.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 40 )

[sub_resource type="AtlasTexture" id=2]
resource_local_to_scene = true
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 160, 16 )

[sub_resource type="Animation" id=3]
resource_name = "anim"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 2 )

[sub_resource type="AtlasTexture" id=5]
resource_local_to_scene = true
atlas = ExtResource( 5 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 20, 4 )

[node name="Portal" type="Area2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 0, 20 )
z_index = 3
texture = SubResource( 1 )

[node name="Middle" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 0, 8 )
texture = SubResource( 2 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Middle"]
anims/anim = SubResource( 3 )

[node name="Borders" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Borders"]
visible = false
polygon = PoolVector2Array( -33, 0, -30, 0, -30, 48, 30, 48, 30, 0, 33, 0, 33, 64, -33, 64 )

[node name="Blocking" type="StaticBody2D" parent="."]
editor/display_folded = true
collision_layer = 261120
collision_mask = 261120

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocking"]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 4 )

[node name="ColorAdd" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 32 )
scale = Vector2( 2, 2 )
z_index = 3
texture = SubResource( 5 )
style = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 32 )
shape = SubResource( 6 )

[node name="InSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
attenuation = 0.026278
bus = "SFX"

[node name="OutSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
attenuation = 0.026278
bus = "SFX"
[connection signal="body_entered" from="." to="." method="_on_Portal_body_entered"]
[connection signal="finished" from="InSound" to="." method="_on_InSound_finished"]
